# NyxLangORG

./: .gitignore  Cargo.toml  LICENSE  README.md  TRADEMARK™.md  TRADEMARK™.txt  cold_backup.nyxt  engine_test.nyxt  hello_web.nyx  install.ps1  install.sh  install_nyx.sh  nyx_db.wal  run_os.sh  security_specs.md  stress_model_corrupted.nyxbin  stress_model_large.nyxbin  test_e2e_db.sh  users.nyxt
collab/nyx-collab-cli/: Cargo.toml  README.md
collab/nyx-collab-cli/src/: main.rs
infrastructure/collab-server/: Cargo.toml  schema.sql
infrastructure/collab-server/src/: main.rs
infrastructure/mirror-agent/: Cargo.toml
infrastructure/mirror-agent/src/: main.rs
infrastructure/registry-server/: Cargo.toml  schema.sql
infrastructure/registry-server/src/: main.rs
libs/hypervisor/: Cargo.toml
libs/hypervisor/src/: cli.rs  lib.rs
stdlib/: Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  README.md  arch.nyx  hardware.nyx  list.nyx  mem.nyx  meta.nyx  ml.nyx
stdlib/collections/: README.md  lib.rs
stdlib/core/: README.md  lib.rs  ui.nyx
stdlib/core/ui/: modifiers.nyx
stdlib/crypto/: engine.json  mod.nyx
stdlib/df/: column.nyx  dataframe.nyx  engine.json  expr.nyx  io.nyx  lazy.nyx  ml_bridge.nyx  mod.nyx  python_bridge.nyx  schema.nyx  server.nyx  sql.nyx  stats.nyx  stream.nyx  transform.nyx  viz.nyx  window.nyx
stdlib/doc/: docx.nyx  engine.json  md.nyx  pdf.nyx
stdlib/docs/: layers.md
stdlib/io/: README.md  lib.rs
stdlib/kernel/: dma.nyx  engine.json  interrupts.nyx  keyboard.nyx  malloc.nyx  mod.nyx  pmm.nyx  scheduler.nyx  vga.nyx
stdlib/math/: README.md  lib.rs
stdlib/media/: engine.json  graph.nyx  image.nyx  svg.nyx
stdlib/ml/: agent.nyx  amp.nyx  augment.nyx  causal.nyx  classical.nyx  compress.nyx  control.nyx  data.nyx  data_version.nyx  declarative.nyx  diagnostics.nyx  diff_data.nyx  diffeq.nyx  dist.nyx  edge.nyx  engine.json  ensemble.nyx  explain.nyx  export.nyx  federated.nyx  gnn.nyx  graph.nyx  hal.nyx  hub.nyx  ir.nyx  jit.nyx  memory.nyx  memory_augmented.nyx  meta.nyx  metrics.nyx  mod.nyx  multimodal.nyx  nn.nyx  optim.nyx  plugin.nyx  privacy.nyx  prob.nyx  profiler.nyx  query.nyx  rag.nyx  (+13 more)
stdlib/ml/nn/: f.nyx
stdlib/net/: README.md  dev_server.nyx  engine.json  http.nyx  mod.nyx  tcp.nyx  udp.nyx  websocket.nyx
stdlib/net/db/: mod.nyx  mysql.nyx  postgres.nyx  result.nyx  sqlite.nyx
stdlib/net/http/: mod.nyx  request.nyx  response.nyx  router.nyx  server.nyx  static.nyx
stdlib/net/http/middleware/: cors.nyx  logger.nyx  mod.nyx  rate_limit.nyx
stdlib/net/http2/: mod.nyx
stdlib/net/json/: encoder.nyx  mod.nyx
stdlib/net/logging/: logger.nyx  mod.nyx
stdlib/net/net/: dns.nyx
stdlib/net/runtime/: event_loop.nyx  future.nyx  mod.nyx  task.nyx  timer.nyx
stdlib/net/security/: mod.nyx  tls.nyx
stdlib/net/tcp/: mod.nyx  server.nyx
stdlib/net/templates/: engine.nyx  mod.nyx
stdlib/net/tests/: web_tests.nyx
stdlib/net/udp/: mod.nyx  server.nyx
stdlib/net/web/: mod.nyx  request.nyx  response.nyx
stdlib/net/websocket/: mod.nyx  server.nyx
stdlib/os/: engine.json  linux.nyx  mod.nyx
stdlib/pretrainedLLM/: alpaca.nyx  audiolm.nyx  aya.nyx  bert.nyx  clip.nyx  codellama.nyx  convnext.nyx  dinov2.nyx  dit.nyx  dolly.nyx  dolly_v2.nyx  efficientnet.nyx  encodec.nyx  falcon.nyx  gemma.nyx  gemma2.nyx  gpt_j.nyx  gpt_neo.nyx  grok.nyx  grok1.nyx  hubert.nyx  jamba.nyx  llama2.nyx  llama3.nyx  mamba.nyx  mistral.nyx  mistral_nemo.nyx  mixtral.nyx  mobilenet.nyx  musicgen.nyx  openelm.nyx  phi2.nyx  phi3.nyx  phi3_vision.nyx  phind_codellama.nyx  qwen.nyx  resnet.nyx  roberta.nyx  sam.nyx  sd_transformer.nyx  (+14 more)
stdlib/src/: ai.rs  alloc.rs  collections.rs  compiler.rs  concurrent.rs  crypto.rs  db.rs  distributed.rs  error.rs  evolution.rs  format.rs  galactic.rs  graphics.rs  hardware.rs  io.rs  iter.rs  kernel.rs  lib.rs  media.rs  mem.rs  meta.rs  net.rs  os.rs  primitive.rs  quantum.rs  science.rs  security.rs  serialization.rs  time.rs  ui.rs  web.rs
stdlib/src/alloc/: arc.rs  arena.rs  box.rs  heap.rs  pool.rs  rc.rs  stack.rs  unique.rs
stdlib/src/collections/: binary_heap.rs  btree_map.rs  btree_set.rs  deque.rs  hash_map.rs  hash_set.rs  linked_list.rs  string.rs  vec.rs
stdlib/src/concurrent/: actor.rs  atomic.rs  channels.rs  condvar.rs  executor.rs  mod_concurrent.rs  mutex.rs  rwlock.rs  task.rs  thread.rs
stdlib/src/core/: iter.rs  mem.rs  mod.rs  option.rs  primitive_extensions.rs  ptr.rs  result.rs  traits.rs
stdlib/src/mem/: copy.rs  drop.rs  layout.rs  pin.rs  ptr.rs  swap.rs  unsafe_utils.rs
stdlib/string/: README.md  lib.rs
stdlib/ui/: presets.nyx  tokens.nyx
stdlib/web/: README.md  engine.json
stdlib/web/cli/: web_cli.rs
stdlib/web/examples/: web_app.nyx
stdlib/web/src/: main.nyx
stdlib/web/src/api/: graphql.nyx  rest.nyx
stdlib/web/src/database/: database.nyx
stdlib/web/src/deployment/: edge.nyx  serverless.nyx
stdlib/web/src/framework/: framework.nyx
stdlib/web/src/middleware/: middleware.nyx
stdlib/web/src/realtime/: events.nyx  websocket.nyx
stdlib/web/src/router/: router.nyx
stdlib/web/src/security/: auth.nyx  jwt.nyx
stdlib/web/src/server/: http_server.nyx
stdlib/web/src/ui/: components.nyx  (+1 more)
tools/cli/: Cargo.toml
tools/cli/example/: load.bolt  load.surn
tools/cli/src/: builder.rs  cache.rs  docgen.rs  lib.rs  lockfile.rs  package_manager.rs  project.rs  registry.rs  resolver.rs  surn_tools.rs  templates.rs  tester.rs  verifier.rs
tools/debugger/: Cargo.toml
tools/debugger/src/: breakpoints.rs  inspector.rs  main.rs  runtime.rs
tools/lsp/: Cargo.toml
tools/lsp/src/: analyzer.rs  completion.rs  index.rs  main.rs
tools/nexus/: Cargo.toml
tools/nexus/src/: main.rs
vm/: Cargo.toml  LICENSE  Nyx VM™  readvm.md  vmread.md
vm/src/: bytecode.rs  emitter.rs  jit.rs  lib.rs  loader.rs  runtime.rs
vm/src/hypervisor/: apic.rs  cmos.rs  cpu.rs  devices.rs  hypercall.rs  jit.rs  kvm.rs  magic_ring.rs  memory.rs  mod.rs  pci.rs  virtio.rs  virtio_block.rs  vm.rs
vm/tests/: jit_bench.rs  jit_hardening.rs  jit_improvements.rs  tag_check.rs
(+606 files in other folders)
