[package]
name = "nyx"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_bytes = "0.11"
safetensors = "0.4.1"
tokenizers = "0.19"
notify = "6.1"
rand = "0.8"
aes-gcm = "0.10"
bincode = "1.3"
uuid = { version = "1.10", features = ["v4", "serde"] }
sqlparser = "0.50"
arrow = "53.0"
image = "0.25"
printpdf = "0.7"
docx-rs = "0.4.19"
rayon = "1.10"
wide = "0.7"
ahash = { version = "0.8", features = ["serde"] }
hashbrown = { version = "0.14", features = ["serde"] }
crc32fast = "1.4"
libloading = { version = "0.8" }
nyx-vm = { path = "vm" }
nyx_diagnostics = { path = "diagnostics" }
nyx_std = { path = "stdlib" }
nyx-hypervisor = { path = "libs/hypervisor", optional = true }

# Cryptography dependencies
sha2 = "0.10"
base64 = "0.22"
argon2 = "0.5"
hkdf = "0.12"
pbkdf2 = "0.12"
hmac = "0.12"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
zeroize = { version = "1.7", features = ["derive"] }
subtle = "2.5"
lazy_static = "1.4"

# Logging
env_logger = "0.11"
log = "0.4"
minifb = { version = "0.28.0", optional = true }
font8x8 = { version = "0.3.1", optional = true }
httpdate = "1.0"
regex = "1.10"
sha1 = "0.10"
socket2 = "0.5"
rustls = "0.23"
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "net", "sync", "macros", "time", "fs"] }
tokio-tungstenite = "0.29.0"
futures = "0.3.32"
thiserror = "2.0.18"
bytemuck = { version = "1.25.0", features = ["derive"] }
winit = "0.28.7"
rsa = { version = "0.9.10", features = ["pem"] }
md-5 = "0.10.6"
fernet = "0.2.2"
openssl = { version = "0.10", features = ["vendored"] }
wgpu = "0.17.0"
pollster = "0.3"
sysinfo = "0.38.4"
libc = "0.2.183"
time = { version = "0.3.47", features = ["formatting", "macros"] }

[features]
# Enables loading compiler plugins from dynamic libraries at runtime.
dynamic_loading = []
default = []
hypervisor = ["dep:nyx-hypervisor"]
jit = ["nyx-vm/jit"]
ui = ["dep:minifb", "dep:font8x8"]

[dev-dependencies]
tempfile = "3.13"
criterion = "0.5"


[workspace]
members = [
  "autonomous/nyx-autotune",
  "collab/nyx-collab-cli",
  "infrastructure/build-worker",
  "infrastructure/collab-server",
  "infrastructure/mirror-agent",
  "infrastructure/registry-server",
  "runtime/sandbox",
  "runtime/scheduler",
  "runtime/memory",
  "runtime/threads",
  "runtime/module_loader",
  "stdlib",
  "tools/debugger",
  "tools/docgen",
  "tools/formatter",
  "tools/linter",
  "tools/lsp",
  "tools/security", 
  "tools/profiler", 
  "tools/repl", 
  "tools/viewer", 
  "tools/ast-explorer",
  "tools/bench", 
  "tools/flow", 
  "tools/doctor", 
  "tools/nexus",
  "diagnostics",
]
default-members = [".", "stdlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "unwind"
strip = "symbols"

