[package]
name = "nyx_std"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
aes-gcm = "0.10"
blake3 = "1.5"
lazy_static = "1.4"
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
sha3 = "0.10"
sha2 = "0.10"
argon2 = "0.5"
hkdf = "0.12"
pbkdf2 = "0.12"
hmac = "0.12"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
base64 = "0.21"
hex = "0.4"
zeroize = { version = "1.7", features = ["derive"] }
subtle = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
nyx_diagnostics = { path = "../diagnostics" }
sysinfo = "0.38.4"
rsa = "0.9.10"
md-5 = "0.10.6"
fernet = "0.2.2"
openssl = { version = "0.10", features = ["vendored"] }
