[package]
name = "nyx-vm"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-Nyx-VM-Proprietary"

[dependencies]
log = "0.4"
cranelift-codegen = { version = "0.110", optional = true }
cranelift-frontend = { version = "0.110", optional = true }
cranelift-jit = { version = "0.110", optional = true }
cranelift-module = { version = "0.110", optional = true }
cranelift-native = { version = "0.110", optional = true }

[dev-dependencies]

[features]
default = []
jit = [
    "cranelift-codegen",
    "cranelift-frontend",
    "cranelift-jit",
    "cranelift-module",
    "cranelift-native",
]
