[package]
name = "nyx-vm"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-Nyx-VM-Proprietary"

[dependencies]
log = "0.4"
kvm-ioctls = "0.19"
kvm-bindings = "0.10"
cranelift-codegen = { version = "0.114.0", optional = true }
cranelift-frontend = { version = "0.114.0", optional = true }
cranelift-jit = { version = "0.114.0", optional = true }
cranelift-module = { version = "0.114.0", optional = true }
cranelift-native = { version = "0.114.0", optional = true }
target-lexicon = "0.12"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
flate2 = "1.0"
chrono = "0.4"
font8x8 = "0.3"

[dev-dependencies]

[features]
default = ["jit"]
jit = [
    "cranelift-codegen",
    "cranelift-frontend",
    "cranelift-jit",
    "cranelift-module",
    "cranelift-native",
]
