[package]
name = "nyx-hypervisor"
version = "0.1.0"
edition = "2021"
authors = ["Nyx Dev Team <dev@nyxlang.org>"]
description = "High-level Virtual Machine Monitor for Nyx Hypervisor"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
nyx-vm = { path = "../../vm" }
nyx_diagnostics = { path = "../../diagnostics" }
minifb = "0.28.0"
kvm-ioctls = "0.24.0"
kvm-bindings = "0.14.0"
font8x8 = "0.3.1"
image = "0.25"

[lib]
path = "src/lib.rs"
