[package]
name = "nyx-cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "nyx_cli"
path = "src/lib.rs"

[[bin]]
name = "nyx"
path = "src/bin/nyx.rs"

[[bin]]
name = "surn"
path = "src/bin/surn.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
nyx = { path = "../../" }
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
git2 = { version = "0.19", features = ["vendored-openssl"] }
url = "2.5"
sha2 = "0.10"
indicatif = "0.17"
itertools = "0.13"
glob = "0.3"
walkdir = "2.5"
hex = "0.4"
md5 = "0.7"
tar = "0.4"
flate2 = "1.0"
reqwest = { version = "0.12", features = ["blocking"] }
tempfile = "3.10"
blake3 = "1.5"
