[package]
name = "nyx-debugger"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
nyx = { path = "../../" }
nyx-vm = { path = "../../vm" }
