[package]
name = "nyx-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
lsp-server = "0.7"
lsp-types = "0.94"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
rayon = "1.10"
ignore = "0.4"
nyx = { path = "../../" }
