[package]
name = "nyx-nexus"
version = "1.0.0"
edition = "2021"
description = "Nyx Executive Dashboard — Production-grade development environment monitor"

[dependencies]
nyx    = { path = "../../" }
nyx-vm = { path = "../../vm" }

# CLI
clap    = { version = "4.5", features = ["derive"] }
colored = "2.1"

# Web Server
axum        = { version = "0.7", features = ["ws", "macros"] }
tokio       = { version = "1.36", features = ["full"] }
tower-http  = { version = "0.5", features = ["fs", "cors"] }

# Serialization
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# System Metrics
sysinfo  = "0.31"
walkdir  = "2.5"
which    = "6.0"

# Logging & Observability
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
open = "5.1"
